[package]
name = "git-who"
version = "0.1.2"
authors = ["Lachlan Krautz <lachlan.krautz@gmail.com>"]
description = "List remote branches by author and date of last commit"
homepage = "https://github.com/lachlankrautz/git-who"
repository = "https://github.com/lachlankrautz/git-who"
readme = "README.md"
keywords = ["git", "remote", "branches", "team", "manage"]
license = "MIT"

[dependencies]
chrono = "0.2"
colored = "1.2"
clap = "2"
